# MADS-ML-CVH

./: .gitignore  Makefile  README.md  _config.yml  pyproject.toml
1-hypertuning-gridsearch/: notebook.ipynb  summary.md
2-hypertuning-mlflow/: model.toml  notebook.ipynb  settings.toml  summary.md
2-hypertuning-mlflow/mlruns/0/: meta.yaml
2-hypertuning-mlflow/mlruns/562760150861259737/: meta.yaml
2-hypertuning-mlflow/mlruns/562760150861259737/03070ca9312847099542aa7598e73085/: meta.yaml
2-hypertuning-mlflow/mlruns/562760150861259737/04232b2512a34f5d86b4327b53c5f618/: meta.yaml
2-hypertuning-mlflow/mlruns/562760150861259737/0585f56c1f1f4dbca1e5d35a99630730/: meta.yaml
2-hypertuning-mlflow/mlruns/562760150861259737/05e3796f370741178d06562bd426f416/: meta.yaml
2-hypertuning-mlflow/mlruns/562760150861259737/0cf86480abcc417e91bdf66378c825d5/: meta.yaml
2-hypertuning-mlflow/mlruns/562760150861259737/0d28446b9d064ac3b236a432f174c762/: meta.yaml
2-hypertuning-mlflow/mlruns/562760150861259737/11e8170027444349bef4dfc908cbc54b/: meta.yaml
3-hypertuning-rnn/: mlflow.db  notebook.ipynb  summary.md
4-hypertuning-ray/: data_prep.py  summary.md
4-hypertuning-ray/2026/01/: 05.txt
5-deployment/: summary.md
6-hackathon/: project_kadaster.md  reflection.md
6_unsupervised/: README.md
6_unsupervised/src/: query_embeddings.py  show_vae.py  vae_embeddings.py
7-ethics/: ChristelvHaren_ethics_week1.docx  ChristelvHaren_ethics_week1.md  ChristelvHaren_ethics_week2.docx  ChristelvHaren_ethics_week2.md
(+651 files in other folders)
